--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,10 @@ jobs:
           hugo-version: latest
           extended: true
       - run: hugo --minify --gc
-      - uses: aws-actions/configure-aws-credentials@v1
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
-      - run: aws s3 sync --delete public s3://m5stackjp
+      - run: aws s3 sync --exact-timestamps --delete public s3://m5stackjp
+      - run: aws cloudfront create-invalidation --distribution-id E2W3DZJ3RPNQ6H --paths "/*"
